--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body{
     bottom: 8px;
     color: white;
     left: 8px;
-    font-size: 1em;
+    font-size: 1rem;
 }
 
 #rgb-val{
@@ -69,7 +69,7 @@ body{
     bottom: 8px;
     color: white;
     right: 8px;
-    font-size: 1em;
+    font-size: 1rem;
 }
 
 #modes {
